--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = {extras = ["all"], version = "^0.100.0"}
 httpx = {extras = ["http2"], version = "^0.24.1"}
-uvicorn = "^0.23.0"
+uvicorn = "^0.23.1"
 asgi-lifespan = "^2.1.0"
 python-json-logger = "^2.0.7"
 opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
@@ -17,8 +17,9 @@ sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
 asyncpg = "^0.28.0"
 install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
-phonenumbers = "^8.13.16"
+phonenumbers = "^8.13.17"
 alembic = "^1.11.1"
+argon2-cffi = "^21.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -32,7 +33,7 @@ sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
 setuptools = "^68.0.0"
 black = "^23.3.0"
 isort = "^5.12.0"
-ruff = "^0.0.272"
+ruff = "^0.0.280"
 
 
 [build-system]
