--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ setuptools = "^68.0.0"
 black = "^23.3.0"
 isort = "^5.12.0"
 ruff = "^0.0.280"
+pytest-mock = "^3.11.1"
 
 
 [build-system]
@@ -56,7 +57,7 @@ testpaths = [
 ]
 env = [
     "PYTEST = True",
-    "CORS_ENABLE = True",
+    "recaptcha_enable = True"
 ]
 filterwarnings = [
     "ignore::DeprecationWarning:pkg_resources.*",
