--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ black = "^23.3.0"
 isort = "^5.12.0"
 ruff = "^0.0.280"
 pytest-mock = "^3.11.1"
+pre-commit = "^3.3.3"
 
 
 [build-system]
@@ -91,4 +92,3 @@ select = [
 docstring-quotes = "double"
 inline-quotes = "single"
 multiline-quotes = "double"
-
