--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
-        name: isort (python)
+        name: isort
         args: ["--profile", "black", "--filter-files"]
 
 -   repo: https://github.com/psf/black
