--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: isort
         name: isort
-        args: ["--profile", "black", "--filter-files"]
+#        args: ["--profile", "black", "--filter-files"]
 
 -   repo: https://github.com/psf/black
     rev: 23.7.0
