--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -87,7 +87,9 @@ jobs:
         run: pip install poetry
 
       - name: "Installing dependencies"
-        run: poetry install
+        run: |
+          poetry config virtualenvs.create false --local
+          poetry install
 
       - name: Linter with isort
         run: |
