--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -88,12 +88,12 @@ jobs:
 
       - name: "Installing dependencies"
         run: |
-          poetry config virtualenvs.create false --local
+          poetry env info
           poetry install
 
       - name: Linter with isort
         run: |
-          isort . --check --profile black --diff
+          poetry run isort . --check --profile black --diff
 
   ruff:
     name: "Linter with ruff"
