--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -133,7 +133,7 @@ jobs:
   test:
     name: "Testing code"
     runs-on: ubuntu-latest
-    needs: [pre-commit, black, isort, ruff, mypy]
+    needs: [pre-commit, black, ruff, mypy]
     timeout-minutes: 5
     steps:
       - name: Checkout repository
