--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ mypy = "^1.4.1"
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 pytest-env = "^0.8.2"
-coverage = "^7.2.7"
+coverage = {extras = ["toml"], version = "^7.2.7"}
 pytest-httpx = "^0.22.0"
 sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
 setuptools = "^68.0.0"
@@ -57,7 +57,7 @@ testpaths = [
     "tests",
 ]
 env = [
-    "PYTEST = True",
+#    "PYTEST = True",
     "recaptcha_enable = True",
     "cors_enable = True"
 ]
