--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -87,13 +87,12 @@ jobs:
             ${{ runner.os }}-poetry-
 
       - name: "Installing poetry"
+        run: pip install poetry
+
+      - name: "Installing poetry"
         run: |
           poetry config virtualenvs.create false
           poetry install
-
-
-      - name: "Installing dependencies"
-        run: poetry install
 
       - name: Linter with ruff
         run: |
@@ -162,9 +161,7 @@ jobs:
         run: pip install poetry
 
       - name: "Installing dependencies"
-        run: |
-          poetry config virtualenvs.create false
-          poetry install
+        run: poetry install
 
       - name: "Testing code"
         run: |
