--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = {extras = ["all"], version = "^0.100.1"}
 httpx = {extras = ["http2"], version = "^0.24.1"}
-uvicorn = "^0.23.1"
+uvicorn = "^0.23.2"
 asgi-lifespan = "^2.1.0"
 python-json-logger = "^2.0.7"
 opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
@@ -20,6 +20,9 @@ prometheus-fastapi-instrumentator = "^6.1.0"
 phonenumbers = "^8.13.17"
 alembic = "^1.11.1"
 argon2-cffi = "^21.3.0"
+pyjwt = "^2.8.0"
+cryptography = "^41.0.2"
+rich = "^13.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
