--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ argon2-cffi = "^21.3.0"
 pyjwt = "^2.8.0"
 cryptography = "^41.0.2"
 rich = "^13.5.0"
+aiosmtplib = "^2.0.2"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
