--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
 asyncpg = "^0.28.0"
 install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
-phonenumbers = "^8.13.17"
-alembic = "^1.11.1"
+phonenumbers = "^8.13.18"
+alembic = "^1.11.2"
 argon2-cffi = "^21.3.0"
 pyjwt = "^2.8.0"
 aiosmtplib = "^2.0.2"
@@ -83,7 +83,9 @@ exclude = [
     ".mypy_cache",
     ".data",
 ]
-per-file-ignores = {"__init__.py" = ["F401"]}
+
+#per-file-ignores = {"__init__.py" = ["F401"]}
+
 select = [
     "I", "N", "ASYNC", "B", "A", "COM", "C4", "DTZ", "T10", "EXE", "FA", "ISC",
     "ICN", "PIE", "Q", "RSE", "RET", "SLF", "TD", "FIX", "F",
