--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,38 +7,39 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = {extras = ["all"], version = "^0.100.1"}
+fastapi = {extras = ["all"], version = "^0.103.1"}
 httpx = {extras = ["http2"], version = "^0.24.1"}
 uvicorn = "^0.23.2"
 asgi-lifespan = "^2.1.0"
 python-json-logger = "^2.0.7"
-opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
+opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
 sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
 asyncpg = "^0.28.0"
 install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
 phonenumbers = "^8.13.18"
-alembic = "^1.11.2"
-argon2-cffi = "^21.3.0"
+alembic = "^1.12.0"
+argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
 aiosmtplib = "^2.0.2"
 jinja2 = "^3.1.2"
+python-multipart = "^0.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.1"
-pytest = "^7.4.0"
-pytest-asyncio = "^0.21.0"
-pytest-env = "^0.8.2"
-coverage = {extras = ["toml"], version = "^7.2.7"}
-pytest-httpx = "^0.22.0"
-sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
-setuptools = "^68.0.0"
-black = "^23.3.0"
+mypy = "^1.5.1"
+pytest = "^7.4.1"
+pytest-asyncio = "^0.21.1"
+pytest-env = "^1.0.1"
+coverage = {extras = ["toml"], version = "^7.3.0"}
+pytest-httpx = "^0.24.0"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
+setuptools = "^68.1.2"
+black = "^23.7.0"
 isort = "^5.12.0"
-ruff = "^0.0.280"
+ruff = "^0.0.287"
 pytest-mock = "^3.11.1"
-pre-commit = "^3.3.3"
+pre-commit = "^3.4.0"
 
 
 [build-system]
