--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 x-dockerfile-inline: &dockerfile_inline
     dockerfile_inline: |
-      FROM python:3.11-slim-bookworm
+      FROM python:3.12-slim-bookworm
       ENV PIP_ROOT_USER_ACTION=ignore
       ENV PYTHONDONTWRITEBYTECODE=1
       ENV PYTHONUNBUFFERED=1
@@ -45,6 +45,7 @@ services:
       --entrypoints.rabbitmq.address=:5672
       --entrypoints.redis.address=:6379
       --entrypoints.postgres.address=:5432
+      --entrypoints.mongo.address=:27017
       --providers.docker
       --providers.docker.endpoint=unix:///var/run/docker.sock
       --providers.docker.exposedByDefault=false
@@ -58,6 +59,7 @@ services:
       - ${RABBITMQ_PORT:-5672}:5672
       - ${REDIS_PORT:-6379}:6379
       - ${DB_PORT:-5432}:5432
+      - ${MONGO_PORT:-27017}:27017
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik.tls.yml:/etc/traefik/traefik.tls.yml:ro
@@ -207,6 +209,25 @@ services:
       - "traefik.tcp.routers.rabbitmq.rule=HostSNI(`*`)"
       - "traefik.tcp.routers.rabbitmq.entrypoints=rabbitmq"
       - "traefik.tcp.services.rabbitmq.loadbalancer.server.port=5672"
+
+  fastid-mongo:
+    image: mongo:latest
+    container_name: fastid-mongo
+    restart: unless-stopped
+    volumes:
+      - ./.data/mongo:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    networks:
+      - fastid
+    labels:
+      - "traefik.enable=True"
+
+      # TCP
+      - "traefik.tcp.routers.mongo.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.mongo.entrypoints=mongo"
+      - "traefik.tcp.services.mongo.loadbalancer.server.port=27017"
 
   fastid-migrations:
     build:
