--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,40 +6,41 @@ authors = ["Kostya Ten <kostya@yandex.ru>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = {extras = ["all"], version = "^0.103.1"}
-httpx = {extras = ["http2"], version = "^0.24.1"}
+python = "^3.12"
+fastapi = {extras = ["all"], version = "^0.104.0"}
+httpx = {extras = ["http2"], version = "^0.25.0"}
 uvicorn = "^0.23.2"
 asgi-lifespan = "^2.1.0"
 python-json-logger = "^2.0.7"
 opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
-sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
+sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.22"}
 asyncpg = "^0.28.0"
 install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
-phonenumbers = "^8.13.18"
+phonenumbers = "^8.13.23"
 alembic = "^1.12.0"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
 aiosmtplib = "^2.0.2"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
+greenlet = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.5.1"
-pytest = "^7.4.1"
+mypy = "^1.6.0"
+pytest = "^7.4.2"
 pytest-asyncio = "^0.21.1"
 pytest-env = "^1.0.1"
-coverage = {extras = ["toml"], version = "^7.3.0"}
-pytest-httpx = "^0.24.0"
-sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
-setuptools = "^68.1.2"
-black = "^23.7.0"
+coverage = {extras = ["toml"], version = "^7.3.2"}
+pytest-httpx = "^0.26.0"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.21"}
+setuptools = "^68.2.2"
+black = "^23.9.1"
 isort = "^5.12.0"
-ruff = "^0.0.287"
+ruff = "^0.0.292"
 pytest-mock = "^3.11.1"
-pre-commit = "^3.4.0"
+pre-commit = "^3.5.0"
 
 
 [build-system]
@@ -72,12 +73,12 @@ filterwarnings = [
 
 [tool.black]
 line-length = 120
-target-version = ["py311"]
+target-version = ["py312"]
 skip-string-normalization = true
 
 [tool.ruff]
 line-length = 120
-target-version = "py311"
+target-version = "py312"
 exclude = [
     "venv",
     ".nox",
