--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+default_language_version:
+    python: python3.12.0
+default_stages: [pre-commit, pre-push]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -30,7 +33,7 @@ repos:
       language_version: python3.12
 
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.1.0'
+    rev: v0.1.0
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
