--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ aiosmtplib = "^2.0.2"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 greenlet = "^3.0.0"
+sentry-sdk = {extras = ["fastapi", "sqlalchemy", "httpx"], version = "^1.32.0"}
 
 
 [tool.poetry.group.dev.dependencies]
