--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Authorization and authentication service"
 authors = ["Kostya Ten <kostya@yandex.ru>"]
 readme = "README.md"
 
+include = [
+   { path = 'migrations', format = ["sdist", "wheel"] },
+   { path = 'alembic.ini', format = ["sdist", "wheel"] }
+]
+
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["all"], version = "^0.104.0"}
@@ -25,7 +30,6 @@ aiosmtplib = "^2.0.2"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 greenlet = "^3.0.0"
-sentry-sdk = {extras = ["fastapi", "sqlalchemy", "httpx"], version = "^1.32.0"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -42,7 +46,6 @@ isort = "^5.12.0"
 ruff = "^0.0.292"
 pytest-mock = "^3.11.1"
 pre-commit = "^3.5.0"
-
 
 [build-system]
 requires = ["poetry-core"]
