--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,51 @@
 [tool.poetry]
 name = "FastID"
 version = "0.0.1"
-description = "Authorization and authentication service"
+description = "Single Sign-On (SSO) Server"
 authors = ["Kostya Ten <kostya@yandex.ru>"]
 readme = "README.md"
 
+include = [
+   { path = 'migrations', format = ["sdist", "wheel"] },
+   { path = 'alembic.ini', format = ["sdist", "wheel"] }
+]
+
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = {extras = ["all"], version = "^0.100.1"}
-httpx = {extras = ["http2"], version = "^0.24.1"}
+python = "^3.12"
+fastapi = {extras = ["all"], version = "^0.104.0"}
+httpx = {extras = ["http2"], version = "^0.25.0"}
 uvicorn = "^0.23.2"
 asgi-lifespan = "^2.1.0"
 python-json-logger = "^2.0.7"
-opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
-sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
+opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
+sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.22"}
 asyncpg = "^0.28.0"
 install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
-phonenumbers = "^8.13.18"
-alembic = "^1.11.2"
-argon2-cffi = "^21.3.0"
+phonenumbers = "^8.13.23"
+alembic = "^1.12.0"
+argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
 aiosmtplib = "^2.0.2"
 jinja2 = "^3.1.2"
+python-multipart = "^0.0.6"
+greenlet = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.1"
-pytest = "^7.4.0"
-pytest-asyncio = "^0.21.0"
-pytest-env = "^0.8.2"
-coverage = {extras = ["toml"], version = "^7.2.7"}
-pytest-httpx = "^0.22.0"
-sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
-setuptools = "^68.0.0"
-black = "^23.3.0"
+mypy = "^1.6.0"
+pytest = "^7.4.2"
+pytest-asyncio = "^0.21.1"
+pytest-env = "^1.0.1"
+coverage = {extras = ["toml"], version = "^7.3.2"}
+pytest-httpx = "^0.26.0"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.21"}
+setuptools = "^68.2.2"
+black = "^23.9.1"
 isort = "^5.12.0"
-ruff = "^0.0.280"
+ruff = "^0.0.292"
 pytest-mock = "^3.11.1"
-pre-commit = "^3.3.3"
-
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -71,12 +77,12 @@ filterwarnings = [
 
 [tool.black]
 line-length = 120
-target-version = ["py311"]
+target-version = ["py312"]
 skip-string-normalization = true
 
 [tool.ruff]
 line-length = 120
-target-version = "py311"
+target-version = "py312"
 exclude = [
     "venv",
     ".nox",
