--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -161,7 +161,9 @@ jobs:
         run: pip install poetry
 
       - name: "Installing dependencies"
-        run: poetry install
+        run: |
+          poetry config virtualenvs.create false
+          poetry install --with dev
 
       - name: "Testing code"
         run: |
