--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "FastID"
-version = "0.0.1"
+version = "0.0.4"
 description = "Single Sign-On (SSO) Server"
-authors = ["Kostya Ten <kostya@yandex.ru>"]
+authors = ["Kostya Ten <kostya@yandex.com>"]
 readme = "README.md"
 
 include = [
@@ -20,7 +20,6 @@ python-json-logger = "^2.0.7"
 opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
 sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.22"}
 asyncpg = "^0.28.0"
-install = "^1.3.5"
 prometheus-fastapi-instrumentator = "^6.1.0"
 phonenumbers = "^8.13.23"
 alembic = "^1.12.0"
@@ -72,7 +71,10 @@ env = [
 ]
 filterwarnings = [
     "ignore::DeprecationWarning:pkg_resources.*",
-    "ignore::DeprecationWarning:google.rpc.*"
+    "ignore::DeprecationWarning:google.rpc.*",
+    "ignore:.*custom tp_new.*in Python 3.14.*:DeprecationWarning",
+    "ignore:datetime.datetime.utcfromtimestamp.*:DeprecationWarning",
+    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
 ]
 
 [tool.black]
