--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,9 +42,9 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.0
-    hooks:
-    -   id: mypy
-        additional_dependencies:
-        - pydantic~=2.0
+#-   repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.6.0
+#    hooks:
+#    -   id: mypy
+#        additional_dependencies:
+#        - pydantic~=2.0
