--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,11 @@ phonenumbers = "^8.13.23"
 alembic = "^1.12.0"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
-aiosmtplib = "^2.0.2"
+aiosmtplib = "^3.0.0"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
-greenlet = "^3.0.0"
+greenlet = "^3.0.1"
+redis = "^5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -45,6 +46,8 @@ isort = "^5.12.0"
 ruff = "^0.0.292"
 pytest-mock = "^3.11.1"
 pre-commit = "^3.5.0"
+fakeredis = "v2.20.0"
+types-redis = "^4.6.0.7"
 
 [build-system]
 requires = ["poetry-core"]
@@ -67,7 +70,9 @@ testpaths = [
 env = [
     "PYTEST = True",
     "recaptcha_enable = True",
-    "cors_enable = True"
+    "cors_enable = True",
+    "redis_username=test_user",
+    "redis_password=test_password",
 ]
 filterwarnings = [
     "ignore::DeprecationWarning:pkg_resources.*",
