--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 fastapi = {extras = ["all"], version = "^0.104.0"}
 httpx = {extras = ["http2"], version = "^0.25.0"}
 uvicorn = "^0.23.2"
@@ -30,6 +30,7 @@ jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 greenlet = "^3.0.1"
 redis = "^5.0.1"
+poetry = "^1.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -82,12 +83,12 @@ filterwarnings = [
 
 [tool.black]
 line-length = 120
-target-version = ["py312"]
+target-version = ["py311"]
 skip-string-normalization = true
 
 [tool.ruff]
 line-length = 120
-target-version = "py312"
+target-version = "py311"
 exclude = [
     "venv",
     ".nox",
