--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ aiosmtplib = "^3.0.0"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 greenlet = "^3.0.1"
+asyncclick = "^8.1.3.4"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -49,6 +50,9 @@ pre-commit = "^3.5.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+create_admin = "fastid.command.create_admin:create_admin"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
