--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-create_admin = "fastid.command.create_admin:create_admin"
+user = "fastid.command.user:create"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
