--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ python-multipart = "^0.0.6"
 greenlet = "^3.0.1"
 asyncclick = "^8.1.3.4"
 async-lru = "^2.0.4"
+timezones = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.0"
