--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ greenlet = "^3.0.1"
 asyncclick = "^8.1.3.4"
 async-lru = "^2.0.4"
 websockets = "^12.0"
+pyotp = "^2.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.0"
