--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ asyncclick = "^8.1.3.4"
 async-lru = "^2.0.4"
 websockets = "^12.0"
 pyotp = "^2.9.0"
+qrcode = "^7.4.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.0"
