--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "FastID"
-version = "0.0.4"
+version = "0.0.5"
 description = "Single Sign-On (SSO) Server"
 authors = ["Kostya Ten <kostya@yandex.com>"]
 readme = "README.md"
@@ -21,7 +21,7 @@ opentelemetry-exporter-otlp-proto-grpc = "^1.21.0"
 sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.23"}
 asyncpg = "^0.29.0"
 prometheus-fastapi-instrumentator = "^6.1.0"
-phonenumbers = "^8.13.24"
+phonenumbers = "^8.13.25"
 alembic = "^1.12.0"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
@@ -31,6 +31,9 @@ python-multipart = "^0.0.6"
 greenlet = "^3.0.1"
 asyncclick = "^8.1.3.4"
 async-lru = "^2.0.4"
+websockets = "^12.0"
+pyotp = "^2.9.0"
+qrcode = "^7.4.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.0"
